# bshp_3

./: .dockerignore  .gitignore  data_processing.py  db.py  docker-compose-prod.yml  docker-compose-stage.yml  docker-compose.resources.yml  docker-compose.yml  models.py  pyproject.toml  tasks.py
_to_delete_models/: processor.py
bshp_ml/: Dockerfile  Dockerfile.prod  requirements.txt  start.sh
bshp_ml/app/: api_doc.yaml  data_processing.py  db.py  main_app.py  models.py  readme.md  settings.py  tasks.py
bshp_ml/app/_gen_md/: script.py
bshp_ml/app/api/: __init__.py  cb.py  cb_new.py  embed.py  fsttxt.py
bshp_ml/app/ml/: __init__.py  data_processing.py  metrics.py  models.py  utils.py
bshp_ml/app/ml/cb/: __init__.py  classifier.py  classifier_txt.py  data_processing.py  embed.py  utils.py
bshp_ml/app/ml/fstxt/: __init__.py  ext.py  model.py  utils.py
bshp_ml/app/ml/transformers/: __init__.py  model.py
bshp_ml/app/models/: __init__.py  catboost.py  models.py
bshp_ml/app/schemas/: __init__.py  models.py  tasks.py
bshp_ml/app/tasks/: __init__.py  loader.py  manager.py  processing.py  reader.py  utils.py
test/data/3/: ВыгрузитьJson.epf  ТестДанныхБСХП.epf
test/data/4/: manual_kolos_24_26.7z
test/data/5/: аренда тест.txt  кукуруза тест  пшеница.txt  тест пусто
test/data/7/: .ipynb  камаз  камаз_api  пшеница
test/data/8/: новый контрагент  новый контрагент res
