[project]
name = "bshp-3"
version = "0.1.0"
description = ""
authors = [
    {name = "Софья Кравченко",email = "svkravchenko@1cbit.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.7.0)",
    "asyncio (==3.4.3)",
    "catboost (==1.2.8)",
    "click (==8.1.7)",
    "colorama (==0.4.6)",
    "dnspython (==2.7.0)",
    "et-xmlfile (==2.0.0)",
    "fastapi (==0.115.6)",
    "h11 (==0.14.0)",
    "idna (==3.10)",
    "joblib (==1.4.2)",
    "motor (==3.7.1)",
    "numpy (==2.2.0)",
    "pandas (==2.2.3)",
    "pydantic (==2.10.4)",
    "pydantic-settings (==2.9.1)",
    "pydantic-core (==2.27.2)",
    "pymongo (==4.13.2)",
    "python-dateutil (==2.9.0.post0)",
    "python-multipart (==0.0.20)",
    "pytz (==2024.2)",
    "scikit-learn (==1.6.0)",
    "scipy (==1.14.1)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "starlette (==0.41.3)",
    "threadpoolctl (==3.5.0)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2024.2)",
    "uvicorn (==0.34.0)",
    "cachetools (>=5.3.1)",
    "aiohttp (==3.10.5)",
    "gensim (>=4.4.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
